give each form an id and style them to prevent overlapping.

--- a/bed-allocation-system/css/login.css
+++ b/bed-allocation-system/css/login.css
@@ -81,3 +81,9 @@ span {
   bottom: 68px;
   position: absolute;
 }
+#login {
+  left: 50px;
+}
+#register {
+  left: 450px;
+}
